# howlto

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile_nushell  README.md  config.toml.example  justfile
.github/workflows/: build.yml  release.yml
docs/: examples.md  shell-integration.md  todo.md
src/: config.rs  error.rs  lib.rs  logging.rs  main.rs  mock_openai_server.rs  openai_server.rs  profile.rs  session.rs
src/agent/: answer.rs  chat.rs  cmd.rs  mod.rs  sandbox.rs  shell_command_gen.rs  tools.rs
src/agents/: mod.rs  shell_command_gen.rs  tools.rs
src/config/: mod.rs  profile.rs
src/shell/: fish.rs  mod.rs
src/shell/bash/: init.bash
src/shell/cmd/: init.lua
src/shell/fish/: init.fish  mod.rs
src/shell/nushell/: init.nu
src/shell/zsh/: init.zsh
src/tui/: chat.rs  command_select.rs  dangerous_execution.rs  editor.rs  elevate.rs  logs.rs  markdown.rs  mod.rs  select.rs  terminal.rs
src/tui/cmd/: mod.rs  modify.rs  select.rs
src/tui/command_helper/: mod.rs  modify.rs  select.rs
