[package]
edition = "2024"
name = "howlto"
readme = "README.md"
version = "0.1.0"

[dependencies]
anyhow = {version = "1.0.100", features = ["backtrace"]}
axum = {version = "0.8.7", optional = true}
bon = "3.8.1"
clap = {version = "4.5.53", features = ["derive"]}
clipboard-rs = "0.3.1"
crossterm = {version = "^0.28", features = ["event-stream"]}
indicatif = {version = "^0.18", features = ["tokio"]}
ratatui = "^0.29.0"
reqwest = "0.12.25"
rig-core = "0.27.0"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.145"
shellexpand = "3.1.1"
sysinfo = "0.37.2"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "sync", "fs", "io-util", "process", "io-std"] }
tokio-stream = "0.1"
toml = "0.9.8"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-indicatif = "^0.3"
tracing-subscriber = {version = "0.3.22", features = ["env-filter"]}
tui-textarea = "0.7.0"
unicode-width = "^0.2.0"
uuid = {version = "1.11", features = ["v4"]}
which = "8.0.0"

[[bin]]
name = "mocker"
path = "src/bin/mocker.rs"
required-features = ["mocker"]

[features]
default = []
mocker = ["dep:axum"]
