[package]
edition = "2024"
name = "howlto"
readme = "README.md"
rust-version = "1.94.1"
version = "0.1.0"

[dependencies]
anyhow = { version = "1", features = ["backtrace"] }
axum = { version = "0.8", optional = true }
bitflags = "2"
bon = "3"
clap = { version = "4", features = ["derive"] }
clipboard-rs = "0.3"
crossterm = { version = "0.29", features = ["event-stream", "libc", "use-dev-tty"] }
hyper-tls = { version = "0.6", features = ["vendored"] }
indicatif = { version = "0.18", features = ["tokio"] }
phf = { version = "0.13", features = ["macros"] }
ratatui = "0.30"
reqwest = { version = "0.13" }
rig = { package = "rig-core", version = "0.37" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
shellexpand = "3"
sysinfo = "0.37"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "sync", "fs", "io-util", "process", "io-std"] }
tokio-stream = "0.1"
toml = "0.9"
tracing = "0.1.43"
tracing-appender = "0.2.4"
tracing-indicatif = "0.3"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-markdown = { version = "0.3", default-features = false }
unicode-width = "0.2"
uuid = { version = "1", features = ["v4"] }
which = "8.0.0"

[[bin]]
name = "mocker"
path = "src/bin/mocker.rs"
required-features = ["mocker"]

[features]
default = []
mocker = ["dep:axum"]

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
