[package]
edition = "2024"
name = "howlto"
readme = "README.md"
version = "0.2.1"

[dependencies]
anyhow = {version = "1.0.102", features = ["backtrace"]}
bitflags = "2.13.0"
bon = "3.9.2"
clap = {version = "4.6.1", features = ["derive"]}
clipboard-rs = "0.3.4"
crossterm = {version = "^0.29", features = ["event-stream", "libc", "use-dev-tty"]}
indicatif = {version = "^0.18", features = ["tokio"]}
phf = {version = "0.13.1", features = ["macros"]}
pulldown-cmark = {version = "0.13", default-features = false}
ratatui = {version = "^0.30.1", features = ["crossterm"]}
ratatui-textarea = "0.9.2"
reqwest = {version = "0.13.4", features = ["native-tls-vendored"]}
rig-core = "0.38.2"
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"
shellexpand = "3.1.2"
sysinfo = "0.39.3"
thiserror = "2.0.18"
tokio = {version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "sync", "fs", "io-util", "process", "io-std"]}
tokio-stream = "0.1"
toml = "1.1.2"
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-indicatif = "^0.3"
tracing-subscriber = {version = "0.3.23", features = ["env-filter"]}
unicode-width = "^0.2.2"
uuid = {version = "1.23", features = ["v4"]}
which = "8.0.3"

# Read the optimization guideline for more details: https://ratatui.rs/recipes/apps/release-your-app/#optimizations
[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
strip = true
